# backend/openapi.json
@@ -476,6 +476,29 @@
         }
       }
     },
+    "/import/{id}/ws": {
+      "get": {
+        "tags": [
+          "ImportSession"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/import/{id}/chunks/{index}": {
       "get": {
         "tags": [
